syntax = "proto3";

package processor;

// The image classification service
service ImageClassification {
  rpc classify (ImageToBeClassified) returns (Classification) {}
}

service AudioClassification {
  rpc classify (AudioToBeClassified) returns (Classification) {}
}

message Image {
  string base64Image = 1;
}

message FocusArea {
  int32 x = 1;
  int32 y = 2;
  int32 height = 3;
  int32 width = 4;
}

message ImageToBeClassified {
  Image image = 1;
  bool outlineObjects = 2;
  repeated string classesToOutline = 3;
  repeated FocusArea focusAreas = 4;
}

message Point {
  int32 x = 1;
  int32 y = 2;
}

message Rectangle {
  Point bottomLeft = 1;
  Point topRight = 2;
}

message ImageSize {
  int32 x = 1;
  int32 y = 2;
}

message ClassifiedObject {
  Rectangle boundary = 1;
  float score = 2;
  ImageSize imageSize = 3;
  string objectClass = 4;
}

message ClassifiedSounds {
  float score = 1;
  int32 startPresentationTimestamp = 2;
  int32 stopPresentationTimestamp = 3;
  string class = 4;
}

message Classification {
  repeated ClassifiedSounds sounds = 1;
  repeated ClassifiedObject objects = 2;
}

message AudioToBeClassified {
  bytes audio = 1;
  string codec = 2;
}
